==> aws-samples/aws-stm32-ml-at-edge-accelerator/stm32/Drivers/CommonIO/gpio/iot_gpio_stm32.c <==
#include "FreeRTOS.h"
#include "stm32u5xx_hal_gpio.h"
#include "stm32u5xx_hal_gpio_ex.h"
#include "stm32u5xx_ll_gpio.h"
#include "stm32u585xx.h"
#include "iot_gpio_stm32_prv.h"
#include "iot_gpio.h"
#include <stdbool.h>
	#include "iot_logging_task.h"
    #define IOT_GPIO_MODULE_NAME    "[CommonIO][GPIO]"
    #define IOT_GPIO_LOGF( format, ... )    vLoggingPrintf( IOT_GPIO_MODULE_NAME format, __VA_ARGS__ )
    #define IOT_GPIO_LOG( msg )             vLoggingPrintf( IOT_GPIO_MODULE_NAME msg )
    #define IOT_GPIO_LOGF( format, ... )
    #define IOT_GPIO_LOG( msg )
	#define IOT_GPIO_INTERRUPT_PRIORITY 3

static int32_t prvGetOutModeForHAL( IotGpioOutputMode_t xOutMode,
                                    uint32_t * xOutMode_STM )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    switch( xOutMode )
    {
        case eGpioOpenDrain:
            *xOutMode_STM = GPIO_MODE_OUTPUT_OD;
            break;

        case eGpioPushPull:
            *xOutMode_STM = GPIO_MODE_OUTPUT_PP;
            break;

        default:
            lReturnCode = IOT_GPIO_INVALID_VALUE;
    }

    return lReturnCode;
}

static int32_t prvGetPullForHAL( IotGpioPull_t xPull,
                              uint32_t * xPull_STM )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    switch( xPull )
    {
        case eGpioPullNone:
            *xPull_STM = GPIO_NOPULL;
            break;

        case eGpioPullUp:
            *xPull_STM = GPIO_PULLUP;
            break;

        case eGpioPullDown:
            *xPull_STM = GPIO_PULLDOWN;
            break;

        default:
            lReturnCode = IOT_GPIO_INVALID_VALUE;
    }

    return lReturnCode;
}

static int32_t prvGetInterruptModeForHAL( IotGpioInterrupt_t xInterrupt,
                                          uint32_t * xInterruptMode_STM )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    switch( xInterrupt )
    {
        case eGpioInterruptNone:
            break;

        case eGpioInterruptRising:
            *xInterruptMode_STM = GPIO_MODE_IT_RISING;
            break;

        case eGpioInterruptFalling:
            *xInterruptMode_STM = GPIO_MODE_IT_FALLING;
            break;

        case eGpioInterruptEdge:
            *xInterruptMode_STM = GPIO_MODE_IT_RISING_FALLING;
            break;

        case eGpioInterruptLow:
        case eGpioInterruptHigh:
            lReturnCode = IOT_GPIO_FUNCTION_NOT_SUPPORTED;
            IOT_GPIO_LOG( " Warning: This board does not support level-based interrupts.\r\n"
                          "        Similar behaviour can be implemented only using edge-based interrupts\r\n" );
            break;

        default:
            lReturnCode = IOT_GPIO_INVALID_VALUE;
            break;
    }

    return lReturnCode;
}

static int32_t prvConfigurePin( IotGpioHandle_t const pxGpio,
                                const IotGpioConfig_t * const pxNewConfig )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    /* Validate and map all CommonIO settings to STM HAL settings */
    uint32_t ulPull_STM;
    lReturnCode = prvGetPullForHAL( pxNewConfig->xPull, &ulPull_STM );

    uint32_t ulInterruptMode_STM;
    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
        lReturnCode = prvGetInterruptModeForHAL( pxNewConfig->xInterruptMode, &ulInterruptMode_STM );
    }

    uint32_t ulSpeed_STM;
    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
    	lReturnCode = prvGetSpeedForHAL( pxNewConfig->lSpeed, &ulSpeed_STM );
    }

    uint32_t ulOutMode_STM;
    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
    	lReturnCode = prvGetOutModeForHAL( pxNewConfig->xOutMode, &ulOutMode_STM );
    }

    uint32_t ulFunction_STM;
    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
    	lReturnCode = prvGetFunctionForHAL( pxNewConfig->lFunction, &ulFunction_STM );
    }

    /* Set pin configuration */
    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
        GPIO_InitTypeDef GPIO_InitStruct;
    	IotMappedPin_t * pxMappedPin = &pxGpioMap[ pxGpio->lGpioNumber ];

    	GPIO_InitStruct.Pin = pxMappedPin->xPinMask;
    	GPIO_InitStruct.Pull = ulPull_STM;
    	GPIO_InitStruct.Speed = ulSpeed_STM;
    	GPIO_InitStruct.Alternate = ulFunction_STM;

    	HAL_GPIO_DeInit( pxMappedPin->xPort, pxMappedPin->xPinMask );
        prvDisablePinInterrupt( pxGpio );
        if( pxNewConfig->xDirection == eGpioDirectionInput )
        {
        	if( pxNewConfig->xInterruptMode != eGpioInterruptNone )
        	{
        		GPIO_InitStruct.Mode = ulInterruptMode_STM;
            	HAL_GPIO_Init( pxMappedPin->xPort, &GPIO_InitStruct );
            	prvEnablePinInterrupt( pxGpio );
        	}
        	else
        	{
        		GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
            	HAL_GPIO_Init( pxMappedPin->xPort, &GPIO_InitStruct );
        	}
        }
        else
        {
    		GPIO_InitStruct.Mode = ulOutMode_STM;
        	HAL_GPIO_Init( pxMappedPin->xPort, &GPIO_InitStruct );
        }
    }


    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
        /* Update was successful, update descriptor to reflect new settings */
        pxGpio->xConfig = *pxNewConfig;
    }

    return lReturnCode;
}

int32_t iot_gpio_read_sync( IotGpioHandle_t const pxGpio,
                            uint8_t * pucPinState )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    if( prvIsValidHandle( pxGpio ) && ( pxGpio->xConfig.xDirection == eGpioDirectionInput ) )
    {
    	IotMappedPin_t * pxMappedPin = &pxGpioMap[ pxGpio->lGpioNumber ];
        *pucPinState = (uint8_t)HAL_GPIO_ReadPin( pxMappedPin->xPort, pxMappedPin->xPinMask );
    }
    else
    {
        lReturnCode = IOT_GPIO_INVALID_VALUE;
    }

    return lReturnCode;
}

int32_t iot_gpio_write_sync( IotGpioHandle_t const pxGpio,
                             uint8_t ucPinState )
{
    int lReturnCode = IOT_GPIO_SUCCESS;

    if( prvIsValidHandle( pxGpio ) && ( pxGpio->xConfig.xDirection == eGpioDirectionOutput ) )
    {
    	IotMappedPin_t * pxMappedPin = &pxGpioMap[ pxGpio->lGpioNumber ];
    	HAL_GPIO_WritePin( pxMappedPin->xPort, pxMappedPin->xPinMask, (GPIO_PinState)ucPinState );
    }
    else
    {
        lReturnCode = IOT_GPIO_INVALID_VALUE;
    }

    return lReturnCode;
}
