==> aws/amazon-freertos/vendors/nordic/boards/nrf52840-dk/ports/common_io/iot_gpio.c <==
#include "FreeRTOS.h"
#include "nrf_gpio.h"
#include "nrf_drv_gpiote.h"
#include "iot_gpio.h"
#include "iot_gpio_config.h"
#include "iot_logging_task.h"
    #define IOT_GPIO_MODULE_NAME    "[CommonIO][GPIO]"
    #define IOT_GPIO_LOGF( format, ... )    vLoggingPrintf( IOT_GPIO_MODULE_NAME format, __VA_ARGS__ )
    #define IOT_GPIO_LOG( msg )             vLoggingPrintf( IOT_GPIO_MODULE_NAME msg )
    #define IOT_GPIO_LOGF( format, ... )
    #define IOT_GPIO_LOG( msg )

static bool prvGetOutModeForHAL( IotGpioOutputMode_t xOutMode,
                                 nrf_gpio_pin_drive_t * xOutMode_NRF )
{
    bool bReturnCode = true;

    switch( xOutMode )
    {
        case eGpioOpenDrain:
            *xOutMode_NRF = NRF_GPIO_PIN_S0D1;
            break;

        case eGpioPushPull:
            *xOutMode_NRF = NRF_GPIO_PIN_S0S1;
            break;

        default:
            bReturnCode = false;
    }

    return bReturnCode;
}

static bool prvGetPullForHAL( IotGpioPull_t xPull,
                              nrf_gpio_pin_pull_t * xPull_NRF )
{
    bool bReturnCode = true;

    switch( xPull )
    {
        case eGpioPullNone:
            *xPull_NRF = NRF_GPIO_PIN_NOPULL;
            break;

        case eGpioPullUp:
            *xPull_NRF = NRF_GPIO_PIN_PULLUP;
            break;

        case eGpioPullDown:
            *xPull_NRF = NRF_GPIO_PIN_PULLDOWN;
            break;

        default:
            bReturnCode = false;
    }

    return bReturnCode;
}

static int32_t prvGetInterruptModeForHAL( IotGpioInterrupt_t xInterrupt,
                                          nrf_drv_gpiote_in_config_t * xInterruptConfig_NRF )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    switch( xInterrupt )
    {
        case eGpioInterruptNone:
            break;

        case eGpioInterruptRising:
            *xInterruptConfig_NRF = ( nrf_drv_gpiote_in_config_t ) GPIOTE_CONFIG_IN_SENSE_LOTOHI( true );
            break;

        case eGpioInterruptFalling:
            *xInterruptConfig_NRF = ( nrf_drv_gpiote_in_config_t ) GPIOTE_CONFIG_IN_SENSE_HITOLO( true );
            break;

        case eGpioInterruptEdge:
            *xInterruptConfig_NRF = ( nrf_drv_gpiote_in_config_t ) GPIOTE_CONFIG_IN_SENSE_TOGGLE( true );
            break;

        /* GPIOTE lib doesn't provide a way to do this it's edge based. We, or the user, could implement
         * similar behaviour by using eGpioInterruptEdge, entering a loop once desired hi/low value achieved,
         * and reamining in loop until another toggle.
         */
        case eGpioInterruptLow:
        case eGpioInterruptHigh:
            lReturnCode = IOT_GPIO_FUNCTION_NOT_SUPPORTED;
            IOT_GPIO_LOG( " Warning: This board does not support level-based interrupts.\r\n"
                          "        Similar behaviour can be implemented only using edge-based interrupts\r\n" );
            break;

        default:
            lReturnCode = IOT_GPIO_INVALID_VALUE;
            break;
    }

    return lReturnCode;
}

static int32_t prvConfigurePin( IotGpioHandle_t const pxGpio,
                                const IotGpioConfig_t * const pxNewConfig )
{
    int32_t lReturnCode = IOT_GPIO_INVALID_VALUE;

    switch( pxNewConfig->xDirection )
    {
        case eGpioDirectionInput:
            lReturnCode = prvConfigureInputPin( pxGpio, pxNewConfig );
            break;

        case eGpioDirectionOutput:
            lReturnCode = prvConfigureOutputPin( pxGpio, pxNewConfig );
            break;

        default:
            break;
    }

    if( lReturnCode == IOT_GPIO_SUCCESS )
    {
        /* Update was successful, update descriptor to reflect new settings */
        pxGpio->xConfig = *pxNewConfig;
    }

    return lReturnCode;
}

int32_t iot_gpio_read_sync( IotGpioHandle_t const pxGpio,
                            uint8_t * pucPinState )
{
    int32_t lReturnCode = IOT_GPIO_SUCCESS;

    if( prvIsValidHandle( pxGpio ) && ( pxGpio->xConfig.xDirection == eGpioDirectionInput ) )
    {
        *pucPinState = nrf_gpio_pin_read( plGpioMap[ pxGpio->lGpioNumber ] );
    }
    else
    {
        lReturnCode = IOT_GPIO_INVALID_VALUE;
    }

    return lReturnCode;
}

int32_t iot_gpio_write_sync( IotGpioHandle_t const pxGpio,
                             uint8_t ucPinState )
{
    int lReturnCode = IOT_GPIO_SUCCESS;

    if( prvIsValidHandle( pxGpio ) && ( pxGpio->xConfig.xDirection == eGpioDirectionOutput ) )
    {
        nrf_gpio_pin_write( plGpioMap[ pxGpio->lGpioNumber ], ucPinState );
    }
    else
    {
        lReturnCode = IOT_GPIO_INVALID_VALUE;
    }

    return lReturnCode;
}
